--- a/ReadMe
+++ b/ReadMe
@@ -7,7 +7,7 @@ Next, 4 stimuli appear on each quadrant of the screen. Participant's task is to 
 of the screen.
 The distractors (unattended stimuli) are either alcoholic or non-alcoholic beverage images.
 There are 120 trials in each emotion (neutral/joy/fear) condition, making a total of 360 test trials.
-There are 24 practice trials. 
+There are 24 practice trials. Total task duration varies as a function of response time (around 33 minutes). 
 
 Face Stimuli were selected from NimStim database and includes 6 female, 6 male faces with Neutral/joy/fear emotions.
 The face stimuli have been turned to black and white, cropped and the white backgrounds in these images have been turned to grey.
